# blockifier

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml  no_std.yml
crates/blockifier/: Cargo.toml
crates/blockifier/src/: context.rs  lib.rs  scale_codecs.rs  test_utils.rs  versioned_constants.rs
crates/blockifier/src/abi/: sierra_types.rs
crates/blockifier/src/blockifier/: block.rs  bouncer.rs
crates/blockifier/src/execution/: call_info.rs  contract_class.rs  deprecated_entry_point_execution.rs  entry_point.rs  entry_point_test.rs  execution_utils.rs
crates/blockifier/src/execution/deprecated_syscalls/: hint_processor.rs  mod.rs
crates/blockifier/src/execution/syscalls/: hint_processor.rs  mod.rs  secp.rs
crates/blockifier/src/fee/: actual_cost.rs  actual_cost_test.rs  fee_checks.rs  fee_test.rs  fee_utils.rs  gas_usage.rs
crates/blockifier/src/state/: cached_state.rs  state_api.rs
crates/blockifier/src/transaction/: account_transaction.rs  account_transactions_test.rs  objects.rs  transaction_execution.rs  transaction_types.rs  transaction_utils.rs  transactions.rs  transactions_test.rs
crates/native_blockifier/src/: py_declare.rs  py_deploy_account.rs  py_invoke_function.rs  py_testing_wrappers.rs  py_transaction_execution_info.rs
