[package]
name = "blockifier"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true
description = "The transaction-executing component in the Starknet sequencer."

[lints]
workspace = true

[features]
testing = ["rstest"]
concurrency = []
scale-info = [
  "dep:scale-info",
  "starknet_api/scale-info",
  "cairo-felt/scale-info",
  "cairo-vm/scale-info",
  "cairo-lang-starknet-classes/scale-info",
  "cairo-lang-casm/scale-info",
  "cairo-lang-utils/scale-info"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-secp256k1.workspace = true
ark-secp256r1.workspace = true
cached.workspace = true
cairo-felt.workspace = true
cairo-lang-casm = { workspace = true, features = ["parity-scale-codec"] }
cairo-lang-runner.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-lang-utils.workspace = true
cairo-vm = { workspace = true, features = ["parity-scale-codec"] }
derive_more.workspace = true
indexmap.workspace = true
itertools.workspace = true
keccak.workspace = true
log.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
num-rational.workspace = true
once_cell.workspace = true
phf.workspace = true
rstest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["arbitrary_precision"] }
sha3.workspace = true
starknet-crypto.workspace = true
starknet_api = { workspace = true, features = ["testing", "parity-scale-codec"] }
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
parity-scale-codec = { workspace = true, features = ["derive"]}
scale-info = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
assert_matches.workspace = true
pretty_assertions.workspace = true
rstest.workspace = true
test-case.workspace = true
